fix: give page content margin, avoid fixed footer overlap

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,7 @@
 @charset "utf-8";
 
-//$primary: #f3711a;
-//$background: #d6d1cd;
-//$link-hover: $primary;
-//$family-secondary: #D9DBF1;
-//$navbar-background-color: #222;
-//$navbar-item-color: $family-secondary;
-//$navbar-item-hover-background-color: #343434;
-//$navbar-item-hover-color: $family-secondary;
-//$navbar-dropdown-background-color: $navbar-background-color;
-//$navbar-dropdown-arrow: $primary;
-//$navbar-item-active-color: $primary;
-//
-//$footer-background-color: #343434;
-
 @import "../node_modules/bulma/bulma.sass";
+
+.page-content {
+  margin-bottom: 80px;
+}
